Integration of pytest in Scapy.
A small utility in UTscapy should allow a fast porting of existing *.uts files

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,8 @@ passenv = PATH PWD PROGRAMFILES WINDIR SYSTEMROOT OPENSSL_CONF
           # Used by scapy
           SCAPY_USE_LIBPCAP
 deps = mock
+       pytest 
+       pytest-cov
        # cryptography requirements
        setuptools>=18.5
        ipython
@@ -32,10 +34,13 @@ platform =
   bsd_non_root,bsd_root: darwin|freebsd|openbsd|netbsd
   windows: win32
 commands =
+  linux_non_root: {envpython} {env:SCAPY_PY_OPTS:-m coverage run} -m pytest {posargs} -K osx -K windows -K cyrpto_advanced -K ipv6
   linux_non_root: {envpython} {env:SCAPY_PY_OPTS:-m coverage run} -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -N {posargs}
+  linux_root: sudo -E {envpython} {env:SCAPY_PY_OPTS:-m coverage run} -m pytest {posargs} -K osx -K windows -K cyrpto_advanced -K ipv6 
   linux_root: sudo -E {envpython} {env:SCAPY_PY_OPTS:-m coverage run} -m scapy.tools.UTscapy -c ./test/configs/linux.utsc {posargs}
   bsd_non_root: {envpython} {env:SCAPY_PY_OPTS:-m coverage run} -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark -N {posargs}
   bsd_root: sudo -E {envpython} {env:SCAPY_PY_OPTS:-m coverage run} -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark {posargs}
+  windows: {envpython} {env:SCAPY_PY_OPTS:-m coverage run} -m pytest {posargs} -K osx -K linux -K crypto_advanced -K mock_read_routes_bsd -K require_gui -K open_ssl_client -K vcan_socket -K ipv6 
   windows: {envpython} {env:SCAPY_PY_OPTS:-m coverage run} -m scapy.tools.UTscapy -c test/configs/windows.utsc {posargs}
   coverage combine
 
@@ -170,3 +175,29 @@ per-file-ignores =
     scapy/tools/UTscapy.py:E501
 exclude = scapy/libs/six.py,
           scapy/libs/ethertypes.py
+
+
+# pytest configuration
+[pytest]
+testpaths = test
+markers = 
+    appveyor_only
+    crypto_advanced
+    FIXME_py3
+    ipv6
+    linux
+    manufdb
+    mock_read_routes_bsd
+    needs_root
+    netaccess
+    not_pcapdnet
+    not_pypy
+    open_ssl_client
+    osx
+    python3_only
+    require_gui
+    tcpdump
+    tshark
+    vcan_socket
+    windows
+
