Core typing: windows

--- a/tox.ini
+++ b/tox.ini
@@ -87,7 +87,8 @@ skip_install = true
 deps = mypy==0.931
        typing
        types-mock
-commands = python .config/mypy/mypy_check.py
+commands = python .config/mypy/mypy_check.py linux
+           python .config/mypy/mypy_check.py win32
 
 
 [testenv:docs]
