--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -92,9 +92,11 @@ jobs:
           - os: macos-latest
             python: 2.7
             mode: both
+            installmode: 'libpcap'
           - os: macos-latest
             python: 3.9
             mode: both
+            installmode: 'libpcap'
     steps:
       - name: Checkout Scapy
         uses: actions/checkout@v2
