Testing parallel tox

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -69,7 +69,7 @@ jobs:
         include:
           # Linux non-root only tests
           - os: ubuntu-latest
-            python: [3.6, 3.7, 3.8]
+            python: 3.6,3.7,3.8
             mode: non_root
           # PyPy tests: root only
           - os: ubuntu-latest
