--- a/tox.ini
+++ b/tox.ini
@@ -51,6 +51,7 @@ whitelist_externals = sudo
 passenv = PATH PWD PROGRAMFILES WINDIR SYSTEMROOT
 deps = {[testenv]deps}
 commands =
+  sudo apt-get -qy install build-essential linux-headers-$(uname -r) linux-modules-extra-$(uname -r)
   sudo -E modprobe can
   git clone --depth=1 https://github.com/linux-can/can-utils.git /tmp/can-utils
   bash -c "cd /tmp/can-utils; ./autogen.sh; ./configure; make; sudo make install"
