Update python versions in unittests

--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,8 @@
 
 
 [tox]
-envlist = py{27,34,35,36,37,38,39,py,py3}-{linux,bsd}_{non_root,root},
-          py{27,34,25,36,37,38,39,py,py3}-windows,
+envlist = py{27,34,35,36,37,38,39,310,py27,py39}-{linux,bsd}_{non_root,root},
+          py{27,34,25,36,37,38,39,310,py27,py39}-windows,
 skip_missing_interpreters = true
 minversion = 2.9
 
