--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: "3.10"
       - name: Install tox
         run: pip install tox
       - name: Run flake8 tests
@@ -35,7 +35,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: "3.10"
       - name: Install tox
         run: pip install tox
       - name: Build docs
@@ -49,7 +49,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: "3.10"
       - name: Install tox
         run: pip install tox
       - name: Run mypy
@@ -63,38 +63,38 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python: [2.7, 3.9]
+        python: ["2.7", "3.10"]
         mode: [both]
         installmode: ['']
         include:
           # Linux non-root only tests
           - os: ubuntu-latest
-            python: 3.6
+            python: "3.7"
             mode: non_root
           - os: ubuntu-latest
-            python: 3.7
+            python: "3.8"
             mode: non_root
           - os: ubuntu-latest
-            python: 3.8
+            python: "3.9"
             mode: non_root
           # PyPy tests: root only
           - os: ubuntu-latest
-            python: pypy2
+            python: "pypy2.7"
             mode: root
           - os: ubuntu-latest
-            python: pypy3
+            python: "pypy3.9"
             mode: root
           # Libpcap test
           - os: ubuntu-latest
-            python: 3.9
+            python: "3.10"
             mode: root
             installmode: 'libpcap'
           # MacOS tests
           - os: macos-10.15
-            python: 2.7
+            python: "2.7"
             mode: both
           - os: macos-10.15
-            python: 3.9
+            python: "3.10"
             mode: both
     steps:
       - name: Checkout Scapy
