--- a/tox.ini
+++ b/tox.ini
@@ -140,6 +140,7 @@ commands = flake8 scapy/
 # flake8 configuration
 [flake8]
 ignore = E731, W504
+max-line-length = 88
 per-file-ignores =
     scapy/all.py:F403,F401
     scapy/asn1/mib.py:E501
