Add MD4 implementation
We need this because md4 is gone starting from OpenSSL 3.. yet used in
NTLM

--- a/tox.ini
+++ b/tox.ini
@@ -155,6 +155,7 @@ per-file-ignores =
     scapy/contrib/scada/iec104/__init__.py:F405
     scapy/layers/tls/all.py:F403
     scapy/layers/tls/crypto/all.py:F403
+    scapy/layers/tls/crypto/md4.py:E741
     scapy/libs/winpcapy.py:F405,F403,E501
     scapy/tools/UTscapy.py:E501
 exclude = scapy/libs/six.py,
