--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -7,6 +7,9 @@ on:
     # The branches below must be a subset of the branches above
     branches: [master]
 
+permissions:
+  contents: read
+
 jobs:
   health:
     name: Code health check
