--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -137,6 +137,53 @@ jobs:
     - name: Run tests
       run: tox -e cryptography
 
+utscapy-scanner:
+    name: scanner ${{ matrix.os }} ${{ matrix.installmode }} ${{ matrix.python }} ${{ matrix.mode }}
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 20
+    continue-on-error: true
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest ]
+        python: [ "2.7", "3.10" ]
+        mode: [ both ]
+        installmode: [ '' ]
+        include:
+          - os: ubuntu-latest
+            python: "pypy2.7"
+            mode: root
+          - os: ubuntu-latest
+            python: "pypy3.9"
+            mode: root
+          # Libpcap test
+          - os: ubuntu-latest
+            python: "3.10"
+            mode: root
+            installmode: 'libpcap'
+          # MacOS tests
+          - os: macos-10.15
+            python: "3.10"
+            mode: both
+    steps:
+      - name: Checkout Scapy
+        uses: actions/checkout@v3
+        # Codecov requires a fetch-depth > 1
+        with:
+          fetch-depth: 2
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python }}
+      - name: Install Tox and any other packages
+        run: ./.config/ci/install.sh ${{ matrix.installmode }}
+      - name: Run Tox
+        run: UT_FLAGS=" -k scanner" ./.config/ci/test.sh ${{ matrix.python }} ${{ matrix.mode }}
+      - name: Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          file: /home/runner/work/scapy/scapy/.coverage
+
   # CODE-QL
   analyze:
     name: CodeQL analysis
