--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,6 +25,14 @@ environment:
       TOXENV: "py37-windows"
       WINPCAP: "true"
       UT_FLAGS: "-K tcpdump"
+    - PYTHON: "C:\\Python37-x64"
+      PYTHON_VERSION: "3.7.x"
+      PYTHON_ARCH: "64"
+      TOXENV: "py37-windows"
+      WINPCAP: "false"
+      UT_FLAGS: "-k scanner"
+    allow_failures:
+      - UT_FLAGS: "-k scanner"
 
 # There is no build phase for Scapy
 build: off
