--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -139,7 +139,7 @@ jobs:
       - name: Install Tox and any other packages
         run: ./.config/ci/install.sh ${{ matrix.installmode }}
       - name: Run Tox
-        run: UT_FLAGS=${{ matrix.flags }} ./.config/ci/test.sh ${{ matrix.python }} ${{ matrix.mode }}
+        run: UT_FLAGS="${{ matrix.flags }}" ./.config/ci/test.sh ${{ matrix.python }} ${{ matrix.mode }}
       - name: Codecov
         uses: codecov/codecov-action@v2
         with:
