--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -72,59 +72,45 @@ jobs:
         python: ["3.7", "3.8", "3.9", "3.10"]
         mode: [non_root]
         installmode: ['']
-        flags: ['']
+        flags: [" -K scanner"]
         allow-failure: [false]
         include:
           # Linux root tests
           - os: ubuntu-20.04
             python: "2.7"
             mode: root
-            allow-failure: false
-            flags: " -K scanner"
           - os: ubuntu-latest
             python: "3.10"
             mode: root
-            allow-failure: false
-            flags: " -K scanner"
           # PyPy tests: root only
           - os: ubuntu-20.04
             python: "pypy2.7"
             mode: root
-            allow-failure: false
-            flags: " -K scanner"
           - os: ubuntu-latest
             python: "pypy3.9"
             mode: root
-            allow-failure: false
-            flags: " -K scanner"
           # Libpcap test
           - os: ubuntu-latest
             python: "3.10"
             mode: root
             installmode: 'libpcap'
-            allow-failure: false
-            flags: " -K scanner"
           # MacOS tests
           - os: macos-12
             python: "2.7"
             mode: both
-            allow-failure: false
-            flags: " -K scanner"
           - os: macos-12
             python: "3.10"
             mode: both
-            allow-failure: false
-            flags: " -K scanner"
           # Scanner tests
           - os: ubuntu-20.04
             python: "2.7"
             mode: root
-            allow-failure: false
+            allow-failure: true
             flags: " -k scanner"
           - os: ubuntu-latest
             python: "3.10"
             mode: root
-            allow-failure: false
+            allow-failure: true
             flags: " -k scanner"
           - os: ubuntu-20.04
             python: "pypy2.7"
