Bugfix in automotive staged enumerators (#3803)
* remove scanner tests from pypy

* remove scanner tests from pypy

* Fix minor bug in argument passing of staged_test_cases

* remove scanner tests from all tests which are not allowed to fail

* update

* disable scanner tests for all tests which are not allowed to fail

* update default values of github CI

* try to fix ci

* try to fix ci

* try to fix ci

* try to fix ci

Co-authored-by: Nils Weiss <nils@dissec.to>

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -64,7 +64,7 @@ jobs:
     name: ${{ matrix.os }} ${{ matrix.installmode }} ${{ matrix.python }} ${{ matrix.mode }} ${{ matrix.flags }}
     runs-on: ${{ matrix.os }}
     timeout-minutes: 20
-    continue-on-error: ${{ matrix.allow-failure }}
+    continue-on-error: ${{ matrix.allow-failure == 'true' }}
     strategy:
       fail-fast: false
       matrix:
@@ -72,59 +72,67 @@ jobs:
         python: ["3.7", "3.8", "3.9", "3.10"]
         mode: [non_root]
         installmode: ['']
-        flags: ['']
-        allow-failure: [false]
+        flags: [" -K scanner"]
+        allow-failure: ['false']
         include:
           # Linux root tests
           - os: ubuntu-20.04
             python: "2.7"
             mode: root
-            allow-failure: false
+            flags: " -K scanner"
           - os: ubuntu-latest
             python: "3.10"
             mode: root
-            allow-failure: false
+            flags: " -K scanner"
           # PyPy tests: root only
           - os: ubuntu-20.04
             python: "pypy2.7"
             mode: root
-            allow-failure: false
             flags: " -K scanner"
           - os: ubuntu-latest
             python: "pypy3.9"
             mode: root
-            allow-failure: false
             flags: " -K scanner"
           # Libpcap test
           - os: ubuntu-latest
             python: "3.10"
             mode: root
             installmode: 'libpcap'
-            allow-failure: false
+            flags: " -K scanner"
           # MacOS tests
           - os: macos-12
             python: "2.7"
             mode: both
-            allow-failure: false
+            flags: " -K scanner"
           - os: macos-12
             python: "3.10"
             mode: both
-            allow-failure: false
+            flags: " -K scanner"
           # Scanner tests
+          - os: ubuntu-20.04
+            python: "2.7"
+            mode: root
+            allow-failure: 'true'
+            flags: " -k scanner"
+          - os: ubuntu-latest
+            python: "3.10"
+            mode: root
+            allow-failure: 'true'
+            flags: " -k scanner"
           - os: ubuntu-20.04
             python: "pypy2.7"
             mode: root
-            allow-failure: true
+            allow-failure: 'true'
             flags: " -k scanner"
           - os: ubuntu-latest
             python: "pypy3.9"
             mode: root
-            allow-failure: true
+            allow-failure: 'true'
             flags: " -k scanner"
           - os: macos-12
             python: "3.10"
             mode: both
-            allow-failure: true
+            allow-failure: 'true'
             flags: " -k scanner"
     steps:
       - name: Checkout Scapy
