Drop six library (third & last batch)

--- a/tox.ini
+++ b/tox.ini
@@ -173,5 +173,4 @@ per-file-ignores =
     scapy/layers/tls/crypto/md4.py:E741
     scapy/libs/winpcapy.py:F405,F403,E501
     scapy/tools/UTscapy.py:E501
-exclude = scapy/libs/six.py,
-          scapy/libs/ethertypes.py
+exclude = scapy/libs/ethertypes.py
