--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@
 envlist = py{27,34,35,36,37,38,39,310,py27,py39}-{linux,bsd}_{non_root,root},
           py{27,34,35,36,37,38,39,310,py27,py39}-windows,
 skip_missing_interpreters = true
-minversion = 2.9
+minversion = 4.0
 
 # Main tests
 
@@ -14,6 +14,7 @@ minversion = 2.9
 description = "Scapy unit tests"
 allowlist_externals = sudo
 parallel_show_output = true
+package = wheel
 passenv =
     PATH
     PWD
@@ -28,7 +29,7 @@ deps = mock
        setuptools>=18.5
        ipython
        cryptography
-       coverage
+       coverage[toml]
        python-can
        # disabled on windows because they require c++ dependencies
        brotli ; sys_platform != 'win32'
