Codecov: xml upload

--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,7 @@ commands =
   bsd_non_root: {envpython} {env:SCAPY_PY_OPTS:-m coverage run} -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark -N {posargs}
   bsd_root: sudo -E {envpython} {env:SCAPY_PY_OPTS:-m coverage run} -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark {posargs}
   windows: {envpython} {env:SCAPY_PY_OPTS:-m coverage run} -m scapy.tools.UTscapy -c test/configs/windows.utsc {posargs}
-  coverage combine
+  coverage xml -i
 
 # Variants of the main tests
 
@@ -72,7 +72,7 @@ commands =
   bash -c "rm -rf /tmp/can-utils /tmp/can-isotp"
   lsmod
   sudo -E {envpython} -m coverage run -m scapy.tools.UTscapy -c ./test/configs/linux.utsc {posargs}
-  coverage combine
+  coverage xml -i
 
 # Test used by upstream pyca/cryptography
 [testenv:cryptography]
