--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,9 @@ coverage.xml
 .ipynb_checkpoints
 .mypy_cache
 .vscode
+.DS_Store
 [.]venv/
 __pycache__/
 doc/scapy/_build
 doc/scapy/api
+scapy/.DS_Store
