Revert "Migrate to `pyproject.toml` (#3869)"
just to make sure that without this the test suite no longer
times out with pypy on the CI.

This reverts commit 669506bd42e4141718374ba297974881fe125fb8.

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@
 envlist = py{27,34,35,36,37,38,39,310,py27,py39}-{linux,bsd}_{non_root,root},
           py{27,34,35,36,37,38,39,310,py27,py39}-windows,
 skip_missing_interpreters = true
-minversion = 4.0
+minversion = 2.9
 
 # Main tests
 
@@ -14,7 +14,6 @@ minversion = 4.0
 description = "Scapy unit tests"
 allowlist_externals = sudo
 parallel_show_output = true
-package = wheel
 passenv =
     PATH
     PWD
@@ -29,7 +28,7 @@ deps = mock
        setuptools>=18.5
        ipython
        cryptography
-       coverage[toml]
+       coverage
        python-can
        # disabled on windows because they require c++ dependencies
        brotli ; sys_platform != 'win32'
@@ -44,7 +43,7 @@ commands =
   bsd_non_root: {envpython} {env:SCAPY_PY_OPTS:-m coverage run} -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark -N {posargs}
   bsd_root: sudo -E {envpython} {env:SCAPY_PY_OPTS:-m coverage run} -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark {posargs}
   windows: {envpython} {env:SCAPY_PY_OPTS:-m coverage run} -m scapy.tools.UTscapy -c test/configs/windows.utsc {posargs}
-  coverage xml -i
+  coverage combine
 
 # Variants of the main tests
 
@@ -72,7 +71,7 @@ commands =
   bash -c "rm -rf /tmp/can-utils /tmp/can-isotp"
   lsmod
   sudo -E {envpython} -m coverage run -m scapy.tools.UTscapy -c ./test/configs/linux.utsc {posargs}
-  coverage xml -i
+  coverage combine
 
 # Test used by upstream pyca/cryptography
 [testenv:cryptography]
