--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -125,7 +125,9 @@ jobs:
       - name: Run Tox
         run: UT_FLAGS="${{ matrix.flags }}" ./.config/ci/test.sh ${{ matrix.python }} ${{ matrix.mode }}
       - name: Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v2
+        with:
+            file: /home/runner/work/scapy/scapy/.coverage
 
   cryptography:
     name: pyca/cryptography test
