--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,8 +79,8 @@ version = { attr="scapy.VERSION" }
 
 # coverage
 
-[tool.coverage]
-concurrency = "multiprocessing"
+[tool.coverage.run]
+concurrency = [ "multiprocessing" ]
 omit = [
     # Scapy specific paths
     "scapy/tools/UTscapy.py",
