Build and check the wheel in the twine check as well
It should help to make sure that scapy can be installed from PyPI (or
any other package index) using pip and its sdist.

The check switched to the "build" build frontend because it builds
wheels from sdists by default:
https://pypa-build.readthedocs.io/en/stable/#python--m-build

--- a/tox.ini
+++ b/tox.ini
@@ -139,10 +139,10 @@ commands = codespell --ignore-words=.config/codespell_ignore.txt --skip="*.pyc,*
 description = "Check Scapy code distribution"
 skip_install = true
 deps = twine
-       setuptools>=38.6.0
        cmarkgfm
-commands = python setup.py --quiet sdist
-           twine check dist/*
+       build
+commands = python -m build
+           twine check --strict dist/*
 
 
 [testenv:flake8]
