--- a/tox.ini
+++ b/tox.ini
@@ -141,6 +141,7 @@ skip_install = true
 deps = twine
        cmarkgfm
        build
+setenv = SCAPY_VERSION=3.0.0
 commands = python -m build
            twine check --strict dist/*
 
