--- a/tox.ini
+++ b/tox.ini
@@ -150,7 +150,8 @@ commands = python -m build
 description = "Check Scapy git archive"
 skip_install = true
 allowlist_externals = git
-commands = git archive HEAD -o {envtmpdir}/scapy.tar
+commands = git version
+           git archive HEAD -o {envtmpdir}/scapy.tar
            python -m pip install {envtmpdir}/scapy.tar
            # Below: remove current folder from path to force use of installed Scapy
            python -c "import sys; sys.path.remove(''); import scapy; print(scapy._version_from_git_archive())"
