--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -84,7 +84,7 @@ jobs:
           - os: ubuntu-20.04
             python: "3.10"
             mode: root
-            flags: " -K scanner -K automotive_comm"
+            flags: " -k scanner -k automotive_comm"
           # PyPy tests: root only
           - os: ubuntu-latest
             python: "pypy3.9"
