--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ maintainers = [
     { name="Pierre LALET" },
     { name="Gabriel POTTER" },
     { name="Guillaume VALADON" },
-    { name="Nils Weiss" },
+    { name="Nils WEISS" },
 ]
 license = { text="GPL-2.0-only" }
 requires-python = ">=3.7, <4"
