Fix PyPy3 tests

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,8 @@ deps = mock
        coverage[toml]
        python-can
        # disabled on windows because they require c++ dependencies
-       brotli ; sys_platform != 'win32'
+       # brotli 1.1.0 broken https://github.com/google/brotli/issues/1072
+       brotli < 1.1.0 ; sys_platform != 'win32'
        zstandard ; sys_platform != 'win32'
 platform =
   linux_non_root,linux_root: linux
