--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,15 @@
 # Copyright (C) 2020 Guillaume Valadon <guillaume@valadon.net>
 
 
+# Tox environments:
+# py{version}-{os}-{non_root,root}
+# In our testing, version can be 37 to 312 or py39 for pypy39
+
 [tox]
-envlist = py{27,34,35,36,37,38,39,310,311,py27,py39}-{linux,bsd}_{non_root,root},
-          py{27,34,35,36,37,38,39,310,311,py27,py39}-windows,
+# minversion = 4.0
 skip_missing_interpreters = true
-minversion = 4.0
+# envlist = default when doing 'tox'
+envlist = py{37,38,39,310,311,312}-{linux,bsd,windows}-non_root
 
 # Main tests
 
@@ -36,14 +40,14 @@ deps = mock
        brotli < 1.1.0 ; sys_platform != 'win32'
        zstandard ; sys_platform != 'win32'
 platform =
-  linux_non_root,linux_root: linux
-  bsd_non_root,bsd_root: darwin|freebsd|openbsd|netbsd
+  linux: linux
+  bsd: darwin|freebsd|openbsd|netbsd
   windows: win32
 commands =
-  linux_non_root: {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -N {posargs}
-  linux_root: sudo -E {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c ./test/configs/linux.utsc {posargs}
-  bsd_non_root: {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark -N {posargs}
-  bsd_root: sudo -E {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark {posargs}
+  linux-non_root: {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -N {posargs}
+  linux-root: sudo -E {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c ./test/configs/linux.utsc {posargs}
+  bsd-non_root: {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark -N {posargs}
+  bsd-root: sudo -E {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark {posargs}
   windows: {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c test/configs/windows.utsc {posargs}
   {env:DISABLE_COVERAGE:coverage combine}
   {env:DISABLE_COVERAGE:coverage xml -i}
@@ -99,7 +103,7 @@ commands =
 [testenv:mypy]
 description = "Check Scapy compliance against static typing"
 skip_install = true
-deps = mypy==1.1.1
+deps = mypy==1.7.0
        typing
        types-mock
 commands = python .config/mypy/mypy_check.py linux
@@ -108,10 +112,9 @@ commands = python .config/mypy/mypy_check.py linux
 
 [testenv:docs]
 description = "Build the docs"
-skip_install = true
+deps =
+extras = doc
 changedir = {toxinidir}/doc/scapy
-deps = sphinx>=2.4.2
-       sphinx_rtd_theme
 commands =
   sphinx-build -W --keep-going -b html . _build/html
 
