--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ all = [
     "cryptography>=2.0",
     "matplotlib",
 ]
-docs = [
+doc = [
     "sphinx>=7.0.0",
     "sphinx_rtd_theme>=1.3.0",
     "tox>=3.0.0",
