The Windows Update
This PR includes a major refactor regarding several Windows specific
protocols, particularily SMB2/3 and DCE/RPC. It also touches many parts
of Scapy's core in order to accommodate those changes.

This includes:
  - DCE/RPC:
      - DCERPC_Client with support for NCACN_IP_TCP and NCACN_NP
      - DCERPC_Server with support for NCACN_IP_TCP and NCACN_NP
      - Finish NDR engine !
      - Server/Client Endpoint mapper support
      - Premises of a few special clients (Netlogon, DCOM, ...)
      - A few RPC interfaces (to debug/test the DCE/RPC engine. TODO:
        MORE !)
      - Documentation !
  - SMB2/3:
      - Protocol refactor, many more SMB2/3 structures supported
      - Server (class + 'simple' util smbserver()) (2.0.2 to 3.1.1)
      - Client (class + interactive CLI smbclient()) (2.0.2 only)
      - SMB socket, RPC over SMB socket, etc.
      - Documentation !
  - Kerberos:
      - KerberosSSP to use in SMB/RPC clients/servers
      - Crypto: use cryptography, latest RFC8009, typing, etc.
      - Util functions krb_as_req, krb_tgt_req, kpasswd (both modes), etc.
      - [MS-KILE] variants, SFU and more !
      - Both MIT and Windows variations support
  - NTLM:
      - refactor, clean SSP
      - remove relay (TODO: reimplement with the new system)
  - Extensive GSSAPI / SPNEGO support !
  - Ticketer++
      - CCache support: read/write
      - Kerberos integration: ask/renew/resign/edit tickets
      - Change ticket fields through a GUI ! and more !
  - LDAP
      - Fixes, ASN.1 Windows variation support
      - dclocator, answering machine for "LDAP PING"
  - Automaton:
      - fixes (memory usage on Windows)
      - support for EOF events
      - spawn() mode, better socket.socket support and more !
  - StreamSocket changes, support for TCP reassembly, etc !
  - Unit tests for everything (using samba, etc.)

--- a/tox.ini
+++ b/tox.ini
@@ -97,7 +97,7 @@ skip_install = true
 changedir = {toxinidir}/doc/scapy
 deps = sphinx
 commands =
-  sphinx-apidoc -f --no-toc -d 1 --separate --module-first --templatedir=_templates --output-dir api ../../scapy ../../scapy/modules/ ../../scapy/libs/ ../../scapy/tools/ ../../scapy/arch/ ../../scapy/contrib/scada/* ../../scapy/all.py ../../scapy/layers/all.py ../../scapy/compat.py
+  sphinx-apidoc -f --no-toc -d 1 --separate --module-first --templatedir=_templates --output-dir api ../../scapy ../../scapy/modules/ ../../scapy/libs/ ../../scapy/tools/ ../../scapy/arch/ ../../scapy/contrib/scada/* ../../scapy/layers/msrpce/raw/ ../../scapy/layers/msrpce/all.py ../../scapy/all.py ../../scapy/layers/all.py ../../scapy/compat.py
 
 
 [testenv:mypy]
@@ -125,6 +125,7 @@ description = "Build the docs without rebuilding the API tree"
 skip_install = true
 changedir = {toxinidir}/doc/scapy
 deps = {[testenv:docs]deps}
+allowlist_externals = sphinx-build
 setenv =
   SCAPY_APITREE = 0
 commands =
@@ -170,7 +171,7 @@ commands = flake8 scapy/
 
 # flake8 configuration
 [flake8]
-ignore = E731, W504
+ignore = E203, E731, W504, W503
 max-line-length = 88
 per-file-ignores =
     scapy/all.py:F403,F401
@@ -189,4 +190,5 @@ per-file-ignores =
     scapy/layers/tls/crypto/md4.py:E741
     scapy/libs/winpcapy.py:F405,F403,E501
     scapy/tools/UTscapy.py:E501
-exclude = scapy/libs/ethertypes.py
+exclude = scapy/libs/ethertypes.py,
+          scapy/layers/msrpce/raw/*
