--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -2,7 +2,7 @@ name: Scapy Unit Tests on *BSD
 
 on:
   pull_request:
-    #types: [ labeled ]
+    types: [ labeled ]
     branches: [ master ]
 
 jobs:
