--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@
 # minversion = 4.0
 skip_missing_interpreters = true
 # envlist = default when doing 'tox'
-envlist = py{37,38,39,310,311,312}-{linux,bsd,windows}-non_root
+envlist = py{37,38,39,310,311,312}-{linux,bsd,windows}-{non_root,root}
 
 # Main tests
 
@@ -41,7 +41,7 @@ deps = mock
        zstandard ; sys_platform != 'win32'
 platform =
   linux: linux
-  bsd: darwin|freebsd|openbsd|netbsd
+  bsd: (darwin|freebsd|openbsd|netbsd).*
   windows: win32
 commands =
   linux-non_root: {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -N {posargs}
