--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -2,13 +2,13 @@ name: Scapy Unit Tests on *BSD
 
 on:
   pull_request:
-    types: [ labeled ]
+    #types: [ labeled ]
     branches: [ master ]
 
 jobs:
   freebsd:
     #if: ${{ github.event.label.name == 'ci/bsd' || github.event.label.name == 'ci/freebsd' }}
-    if: contains(github.event.pull_request.labels.*.name, 'ci/bsd')
+    #if: contains(github.event.pull_request.labels.*.name, 'ci/bsd')
     runs-on: macos-12
     name: FreeBSD
     steps:
