--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -136,7 +136,9 @@ jobs:
       - name: Run Tox
         run: UT_FLAGS="${{ matrix.flags }}" ./.config/ci/test.sh ${{ matrix.python }} ${{ matrix.mode }}
       - name: Codecov
-        uses: codecov/codecov-action@v4.0.0-beta.3
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   cryptography:
     name: pyca/cryptography test
