Bundle standalone 'manufdb' file to comply with Wireshark changes.
Loading the dictionnary takes 0.5s by itsef, so we have to cache it in
order to keep reasonable boot times.

--- a/tox.ini
+++ b/tox.ini
@@ -46,8 +46,8 @@ platform =
 commands =
   linux-non_root: {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c ./test/configs/linux.utsc -N {posargs}
   linux-root: sudo -E {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c ./test/configs/linux.utsc {posargs}
-  bsd-non_root: {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark -N {posargs}
-  bsd-root: sudo -E {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K manufdb -K tshark {posargs}
+  bsd-non_root: {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K tshark -N {posargs}
+  bsd-root: sudo -E {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c test/configs/bsd.utsc -K tshark {posargs}
   windows: {envpython} {env:DISABLE_COVERAGE:-m coverage run} -m scapy.tools.UTscapy -c test/configs/windows.utsc {posargs}
   {env:DISABLE_COVERAGE:coverage combine}
   {env:DISABLE_COVERAGE:coverage xml -i}
@@ -137,7 +137,7 @@ description = "Check code for Grammar mistakes"
 skip_install = true
 deps = codespell
 # inet6, dhcp6 and the ipynb files contains french: ignore them
-commands = codespell --ignore-words=.config/codespell_ignore.txt --skip="*.pyc,*.png,*.jpg,*.ods,*.raw,*.pdf,*.pcap,*.js,*.html,*.der,*_build*,*inet6.py,*dhcp6.py,*tcpros.py,*.ipynb,*.svg,*.gif,*.obs,*.gz" scapy/ doc/ test/ .github/
+commands = codespell --ignore-words=.config/codespell_ignore.txt --skip="*.pyc,*.png,*.jpg,*.ods,*.raw,*.pdf,*.pcap,*.js,*.html,*.der,*_build*,*inet6.py,*dhcp6.py,*manuf.py,*tcpros.py,*.ipynb,*.svg,*.gif,*.obs,*.gz" scapy/ doc/ test/ .github/
 
 
 [testenv:twine]
@@ -189,6 +189,7 @@ per-file-ignores =
     scapy/layers/tls/crypto/all.py:F403
     scapy/layers/tls/crypto/md4.py:E741
     scapy/libs/winpcapy.py:F405,F403,E501
+    scapy/libs/manuf.py:E501
     scapy/tools/UTscapy.py:E501
 exclude = scapy/libs/ethertypes.py,
           scapy/layers/msrpce/raw/*
