--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -138,6 +138,7 @@ jobs:
       - name: Codecov
         uses: codecov/codecov-action@v4
         with:
+          verbose: true
           token: ${{ secrets.CODECOV_TOKEN }}
 
   cryptography:
