--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,21 +7,23 @@ environment:
   # Python versions that will be tested
   # Note: it defines variables that can be used later
   matrix:
-    - PYTHON: "C:\\Python37-x64"
-      PYTHON_VERSION: "3.7.x"
+    - PYTHON: "C:\\Python312-x64"
+      PYTHON_VERSION: "3.12.x"
       PYTHON_ARCH: "64"
-      TOXENV: "py37-windows"
+      TOXENV: "py312-windows"
       UT_FLAGS: "-K scanner"
-    - PYTHON: "C:\\Python37-x64"
-      PYTHON_VERSION: "3.7.x"
+    - PYTHON: "C:\\Python312-x64"
+      PYTHON_VERSION: "3.12.x"
       PYTHON_ARCH: "64"
-      TOXENV: "py37-windows"
+      TOXENV: "py312-windows"
       UT_FLAGS: "-k scanner"
 
 # There is no build phase for Scapy
 build: off
 
 install:
+  # Log some debug info
+  - ver
   # Install the npcap, windump and wireshark suites
   - ps: .\.config\appveyor\InstallNpcap.ps1
   - ps: .\.config\appveyor\InstallWindumpNpcap.ps1
