Remove 'mock' dependency

--- a/tox.ini
+++ b/tox.ini
@@ -28,9 +28,7 @@ passenv =
     OPENSSL_CONF
     # Used by scapy
     SCAPY_USE_LIBPCAP
-deps = mock
-       # cryptography requirements
-       setuptools>=18.5
+deps =
        ipython
        cryptography
        coverage[toml]
@@ -105,7 +103,6 @@ description = "Check Scapy compliance against static typing"
 skip_install = true
 deps = mypy==1.7.0
        typing
-       types-mock
 commands = python .config/mypy/mypy_check.py linux
            python .config/mypy/mypy_check.py win32
 
