--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,11 +58,17 @@ all = [
     "pyx",
     "cryptography>=2.0",
     "matplotlib",
+    "flynn>=1.0.0.b2",
+    "crcmod>=1.7"
 ]
 doc = [
     "sphinx>=7.0.0",
     "sphinx_rtd_theme>=1.3.0",
     "tox>=3.0.0",
+]
+dtn = [
+    "flynn>=1.0.0.b2",
+    "crcmod>=1.7"
 ]
 
 # setuptools specific
