Document forwarding machines, split Advanced Usage

--- a/tox.ini
+++ b/tox.ini
@@ -122,10 +122,9 @@ commands =
 # Debug mode
 [testenv:docs2]
 description = "Build the docs without rebuilding the API tree"
-skip_install = true
+extras = doc
 changedir = {toxinidir}/doc/scapy
 deps = {[testenv:docs]deps}
-allowlist_externals = sphinx-build
 setenv =
   SCAPY_APITREE = 0
 commands =
