--- a/tox.ini
+++ b/tox.ini
@@ -94,8 +94,9 @@ description = "Regenerates the API reference doc tree"
 skip_install = true
 changedir = {toxinidir}/doc/scapy
 deps = sphinx
+       cryptography
 commands =
-  sphinx-apidoc -f --no-toc -d 1 --separate --module-first --templatedir=_templates --output-dir api ../../scapy ../../scapy/modules/ ../../scapy/libs/ ../../scapy/tools/ ../../scapy/arch/ ../../scapy/contrib/scada/* ../../scapy/layers/msrpce/raw/ ../../scapy/layers/msrpce/all.py ../../scapy/all.py ../../scapy/layers/all.py ../../scapy/compat.py
+  sphinx-apidoc -f --no-toc -d 1 --separate --module-first --templatedir=_templates --output-dir api ../../scapy ../../scapy/modules/voip.py ../../scapy/modules/krack/ ../../scapy/libs/winpcapy.py ../../scapy/libs/ethertypes.py ../../scapy/libs/m*.py ../../scapy/libs/structures.py ../../scapy/libs/test_pyx.py ../../scapy/tools/ ../../scapy/arch/ ../../scapy/contrib/scada/* ../../scapy/layers/msrpce/raw/ ../../scapy/layers/msrpce/all.py ../../scapy/all.py ../../scapy/layers/all.py ../../scapy/compat.py
 
 
 [testenv:mypy]
@@ -109,7 +110,7 @@ commands = python .config/mypy/mypy_check.py linux
 
 [testenv:docs]
 description = "Build the docs"
-deps =
+deps = cryptography
 extras = doc
 changedir = {toxinidir}/doc/scapy
 commands =
