Fix tox -e docs2

--- a/tox.ini
+++ b/tox.ini
@@ -111,6 +111,8 @@ commands = python .config/mypy/mypy_check.py linux
 [testenv:docs]
 description = "Build the docs"
 deps = cryptography
+       sphinx
+       sphinx_rtd_theme
 extras = doc
 changedir = {toxinidir}/doc/scapy
 commands =
