add contrib.dtn runtime deps

--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,8 @@ deps =
        cryptography
        coverage[toml]
        python-can
+       flynn
+       crcmod
        # disabled on windows because they require c++ dependencies
        # brotli 1.1.0 broken https://github.com/google/brotli/issues/1072
        brotli < 1.1.0 ; sys_platform != 'win32'
